tests/neg-custom-args/captures/i15923b.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i15923b.scala:8:21 ---------------------------------------
8 |  val leak = withCap(f) // error
  |                     ^
  |Found:    (x$0: Cap^) -> Id[Cap^{x$0}]
  |Required: (lcap: Cap^) => Id[Cap^'s1]^'s2
  |
  |Note that capability lcap cannot be included in outer capture set 's1 which is owned by val leak.
  |
  |where:    => refers to a fresh root capability created in value leak when checking argument to parameter op of method withCap
  |          ^  refers to the universal root capability
  |
  | longer explanation available when compiling with `-explain`
